fix: text overflow

--- a/pages/blog/[blogs]/page.module.css
+++ b/pages/blog/[blogs]/page.module.css
@@ -128,4 +128,23 @@
     color: #001a4a;
     font-size: 1.5rem;
   }
+
+  .content p {
+    font-size: 1rem;
+    color: #333;
+    margin: 0.5em 0;
+  }
+
+  .content img {
+    width: 100%;
+    height: 80vh;
+    object-fit: cover;
+    border-radius: 12px;
+  }
+
+  .content a {
+    color: #00a;
+    font-size: 1rem;
+    word-wrap: break-word;
+  }
 }
